# flask-ml-azure-serverless

./: azure-pipelines.yml  pyproject.toml  requirements.txt
