[tool.poetry]
name = "flask-ml-azure-serverless"
version = "0.1.0"
description = ""
authors = ["Mitch Edmunds <mitch.edmunds@proton.me>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.1.2"
pandas = "1.1.5"
scikit-learn = "0.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
